k8s/flux/clusters/tal-clu-1/infra/network/gateway-api/gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http
  namespace: gateway-system
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "*.hl.emerconnelly.com"
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-http
  namespace: kube-prometheus-stack
spec:
  parentRefs:
  - name: http
    namespace: gateway-system
  hostnames:
  - prometheus.hl.emerconnelly.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-prometheus
      port: 9090
